--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "scripts": {
     "start": "parcel",
     "build": "parcel build",
+    "check": "tsc --noEmit",
     "clean": "rimraf dist .parcel-cache"
   },
   "devDependencies": {
@@ -24,7 +25,9 @@
     "postcss": "^8.4.3",
     "postcss-import": "^14.0.2",
     "postcss-preset-env": "^7.0.1",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "typescript": "^4.5.2",
+    "typescript-plugin-css-modules": "^3.4.0"
   },
   "dependencies": {
     "core-js": "^3.19.1"
